<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd699">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_marginTop="43dp"
        android:id="@+id/etShippingInput"
        android:text="@string/_0"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <TextView
        android:text="@string/in_ounces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:layout_below="@+id/etShippingInput"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/weight_of_the_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/textView"
        android:textStyle="normal|bold"
        android:textSize="22sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>