<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffd699">

    <TextView
        android:text="@string/added_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:id="@+id/textView5"
        android:textSize="20sp"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView5"
        android:id="@+id/tvAddedCost"
        android:textSize="20sp"
        android:layout_alignLeft="@+id/tvBaseCost"
        android:layout_alignStart="@+id/tvBaseCost"
        android:layout_alignRight="@+id/tvBaseCost"
        android:layout_alignEnd="@+id/tvBaseCost"
        android:text="@string/_0_00" />

    <TextView
        android:text="@string/total_shipping_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/textView7"
        android:textSize="20sp"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignStart="@+id/textView5" />

    <TextView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/tvTotalShippingCost"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignLeft="@+id/tvAddedCost"
        android:layout_alignStart="@+id/tvAddedCost"
        android:text="@string/_0_00" />

    <TextView
        android:layout_height="wrap_content"
        android:id="@+id/tvBaseCost"
        android:textSize="20sp"
        android:text="@string/_0_00"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_above="@+id/textView5"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7"
        android:layout_width="100dp" />

    <TextView
        android:text="@string/base_cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="48dp"
        android:id="@+id/textView3"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>